# bookseerr

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/api/: health.ts  requests.ts
frontend/src/lib/components/: HealthCheckButton.svelte  RequestButton.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/discover/: +layout.svelte  +page.svelte
frontend/src/routes/discover/popular/: +page.svelte
frontend/src/routes/discover/servers/: +page.svelte
frontend/src/routes/discover/trending/: +page.svelte
frontend/src/routes/pendingRequests/: +page.svelte
frontend/src/routes/requests/: +page.svelte
